tests/snapshots/integration__integration_tests__internal_flag__config_list_with_internal_flag.snap
---
source: tests/integration_tests/internal_flag.rs
info:
  program: wt
  args:
    - "--internal"
    - config
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
⚪ Global Config: [1m~/.config/worktrunk/config.toml[0m
[107m [0m  worktree-path = [32m"../{{ main_worktree }}.{{ branch }}"[0m

⚪ Project Config: [1m[REPO]/.config/wt.toml[0m
💡 [2mNot found[0m

----- stderr -----
